editorial changes on help dialogs as well as new documentation help for German and English

--- a/src/main/resources/hilfe/design_mode_de_DE.html
+++ b/src/main/resources/hilfe/design_mode_de_DE.html
@@ -11,14 +11,7 @@
   <body>
 	<h1>Entwurfsmodus</h1>
 
-	<h2>1. Simulation eines Rechnernetzes starten</h2>
-
-      <p>Um ein erstelltes virtuelles Netzwerk zu nutzen, muss vom Entwurfsmodus in
-		den Simulationsmodus gewechselt werden. Das erfolgt &uuml;ber die entsprechende
-		Schaltfl&auml;che in der Zeile am oberen Fensterrand.
-        <center><img src="hilfe/gfx/aktionsmodus.png"></center> </p>
-
-	<h2>2. Rechnernetz aufbauen</h2>
+	<h2>Rechnernetz aufbauen</h2>
       <p>Komponenten k&ouml;nnen hinzugef&uuml;gt werden, indem sie
 		mit gedr&uuml;ckter Maustaste auf die Entwurfsfl&auml;che gezogen werden
 		<center><img src="hilfe/gfx/draganddrop.gif"></center>	</p>
@@ -31,7 +24,7 @@
       <p> Verbindungen werden gel&ouml;scht, indem im Kontextmen&uuml; einer angeschlossenen
         Komponente der Eintrag zum L&ouml;schen aller Verbindungen ausgew&auml;hlt wird. </p>
 
-	<h2>3. Komponenten konfigurieren</h2>
+	<h2>Komponenten konfigurieren</h2>
       <p> Zur Konfiguration der Komponenten wird durch einen Doppelklick auf die jeweilige
         Komponente ein Eingabebereich am unteren Bildschirmrand ge&ouml;ffnet. Der Name kann
         beliebig gew&auml;hlt werden. Diese Einstellung hat keinen Einfluss auf die Funktion
@@ -59,10 +52,23 @@
         einem anderen Rechner eine Verbindung mit Hilfe der IP-Adresse des realen Zielrechners
         aufgebaut werden. </p>
 
-    <h2> 4. Eigene Anwendungen erstellen </h2>
+    <h2>Eigene Anwendungen erstellen </h2>
       <p> Mit dem Assistenten zur Software-Erstellung ist es m&ouml;glich, eigene Programme
         mit Java zu erstellen und zu ver&auml;ndern. Der Assistent wird &uuml;ber die
         entsprechende Schaltfl&auml;che am oberen Fensterrand gestartet.
         <center><img src="hilfe/gfx/button_wizard.png"></center>	</p>
+        
+    <h2> Wechsel des Anwendungsmodus </h2>
+
+      <p>Um ein erstelltes virtuelles Netzwerk zu nutzen, muss vom Entwurfsmodus in
+		den Simulationsmodus gewechselt werden. Das erfolgt &uuml;ber die entsprechende
+		Schaltfl&auml;che in der Zeile am oberen Fensterrand.
+        <center><img src="hilfe/gfx/aktionsmodus.png"></center> </p>
+      
+      <p> Das Netzwerk kann im Dokumentationsmodus u.a. mit Hilfe von Textelementen dokumentiert werden.
+      Außerdem ist es möglich, eine einfache Dokumentation zu erzeugen:
+      <center><img src="hilfe/gfx/dokumodus.png"></center> </p> 
+
+	
   </body>
 </html>
