--- a/src/main/resources/hilfe/design_mode_en_GB.html
+++ b/src/main/resources/hilfe/design_mode_en_GB.html
@@ -11,13 +11,7 @@
   <body>
 	<h1>Design Mode</h1>
 
-	<h2>1. Starting Computer Network Simulation </h2>
-
-      <p>In order to use the previously built computer network it is necessary to switch
-        to the simulation mode. The button is located at the upper panel of the window.
-        <center><img src="hilfe/gfx/aktionsmodus.png"></center> </p>
-
-	<h2>2. Construct a Computer Network </h2>
+	<h2>Construct a Computer Network </h2>
       <p> Use the mouse to drag and drop the components from the left panel to the
         whiteboard.
 		<center><img src="hilfe/gfx/draganddrop.gif"></center>	</p>
@@ -28,7 +22,7 @@
 		<center><img src="hilfe/gfx/verkabeln.png"></center> </p>
       <p> Use the context menu of the component to delete all connections to this station. </p>
 
-	<h2>3. Configure Components </h2>
+	<h2>Configure Components </h2>
       <p> Select the component with a double-click to configure its properties on the
         lower panel of the window which will be opened. Select any name for the component.
         This property does not influence the functionality of the network simulation. </p>
@@ -53,10 +47,22 @@
         located at the second machine must initialize the connection and therefore the real
         IP address of the first machine must be configured. </p>
 
-    <h2> 4. Programming Individual Software Components </h2>
+    <h2>Programming Individual Software Components </h2>
       <p> The software assistant provides a simple interface to programme and modify
         individual software components which can be used in the simulation mode. The
         assistant is started using the icon at the upper panel of the window.
         <center><img src="hilfe/gfx/button_wizard.png"></center>	</p>
+        
+    <h2>Switch Application Mode </h2>
+
+      <p>In order to use the previously built computer network it is necessary to switch
+        to the simulation mode. The button is located at the upper panel of the window.
+        <center><img src="hilfe/gfx/aktionsmodus.png"></center> </p>
+        
+	<p>
+	To add explanations and to generate a simple documentation switch to the Documentation Mode:
+	<center><img src="hilfe/gfx/dokumodus.png"></center> </p>
+
+	
   </body>
 </html>
