--- a/src/main/resources/hilfe/design_mode_fr_FR.html
+++ b/src/main/resources/hilfe/design_mode_fr_FR.html
@@ -14,7 +14,7 @@
 
       <p>Ce mode permet d’assembler les différents constituants d’un réseau informatique.</p>
 
-	<h2>1. Construction du réseau </h2>
+	<h2>Construction du réseau </h2>
     <p> À l’aide d’un glisser-lâcher à la souris, sélectionner des composants
         dans la marge de gauche et les disposer sur l’espace de travail.
 	 	    <center><img src="hilfe/gfx/draganddrop.gif"></center>	</p>
@@ -26,7 +26,7 @@
     <p> Utiliser le menu contextuel d’un composant pour supprimer toutes ses connexions. </p>
     <p> Utiliser le menu contextuel d’un cable pour le supprimer. </p>
 
-	<h2>2. Paramétrer les composants du réseau </h2>
+	<h2>Paramétrer les composants du réseau </h2>
     <p> Double-cliquer sur le composant à paramétrer. Un ensemble de paramètres apparait
         dans la partie inférieure de la fenêtre qui s’ouvre pour cela. Pour paramétrer
         un autre composant, il suffit de cliquer dessus (clic simple).
@@ -57,10 +57,15 @@
         l’un des modems en mode d’attente des connexions entrantes, et sur les autres,
         il faut spécifier l’adresse IP (réelle) du poste du modem en attente. </p>
 
-  <h2>3. Démarrer la simulation </h2>
+  <h2>Changer de mode </h2>
 
     <p> Pour passer au mode simulation, cliquer sur le bouton de la barre supérieure :
         <center><img src="hilfe/gfx/aktionsmodus.png"></center> </p>
+	  
+	<p> Change au mode documentation pour ajouter des éléments visuels qui facilitent 
+	    la lecture du réseau virtuel :
+	    <center><img src="hilfe/gfx/dokumodus.png"></center></p>
+	  
 
   </body>
 </html>
