--- a/src/main/resources/hilfe/simulation_mode_de_DE.html
+++ b/src/main/resources/hilfe/simulation_mode_de_DE.html
@@ -11,14 +11,8 @@
   <body>
 	<h1>Simulationsmodus</h1>
 
-	<h2> 1. Aufbau des Rechnernetzes bearbeiten </h2>
-	<p> Der Aufbau des virtuellen Rechnernetzes und die IP-Konfiguration der Komponenten
-	erfolgt im Entwurfsmodus, der &uuml;ber die entsprechende Schaltfl&auml;che am oberen
-	Fensterrand erreicht wird.
-	<center><img src="hilfe/gfx/entwurfsmodus.png"></center> </p>
-
-	<h2> 2. Anwendungen installieren/verwenden </h2>
-	<p> Durch einen Doppelklick auf einen Rechner/Notebook wird die zugeh&ouml;rige
+	<h2> Anwendungen installieren/verwenden </h2>
+	<p> Durch einen Klick auf einen Rechner/Notebook wird die zugeh&ouml;rige
 	Arbeitsfl&auml;che (Desktop-Oberfl&auml;che) in einem kleinen Fenster dargestellt.
 	&Uuml;ber das Symbol in	der linken oberen Ecke wird ein Fenster zur Installation
 	und Deinstallation von Programmen ge&ouml;ffnet.
@@ -28,12 +22,12 @@
 	geschlossen sind, beeinflusst die Funktionsweise des Programms nicht (insbesondere f&uuml;r
 	Server-Programme wichtig). </p>
 
-	<h2> 3. IP-Konfiguration ansehen </h2>
+	<h2> IP-Konfiguration ansehen </h2>
 	<p> Die IP-Konfiguration eines Rechners/Notebooks kann &uuml;ber ein Symbol in der rechten
 	unteren Ecke des Fensters mit der Arbeitsfl&auml;che angezeigt werden.
 	<center><img src="hilfe/gfx/netzwek_aus.png"></center> </p>
 
-	<h2> 4. Datenaustausch beobachten </h2>
+	<h2> Datenaustausch beobachten </h2>
 	<p> Die Geschwindigkeit des Datenaustauschs kann &uuml;ber den Schieberegler in der
 	Leiste am oberen Rand des Fensters variiert werden. </p>
 	<p> Alle Dateneinheiten, die von einem Rechner/Notebook versendet und empfangen werden,
@@ -42,10 +36,9 @@
 	 der Komponente bet&auml;tigen) ausgew&auml;hlt werden. </p>
 	 <p> In der Tabelle wird jede Dateneinheit durch eine oder mehrere gruppierte Zeilen
 	 dargestellt. In den verschiedenen Zeilen werden die Daten angezeigt, die den vier Schichten
-	 des Internetschichtenmodells zugeordnet werden. In einem Kontextmen&uuml; besteht die
-	 M&ouml;glichkeit, die Schichten zu markieren, die angezeigt werden sollen. </p>
+	 des Internetschichtenmodells zugeordnet werden.  </p>
 
-	<h2> 5. Firewall Vermittlungsrechner einrichten </h2>
+	<h2> Firewall Vermittlungsrechner einrichten </h2>
 	<p> F&uuml;r die Konfiguration der Firewall eines Vermittlungsrechners im Simulationsmodus
 	steht eine Webschnittstelle zur Verf&uuml;gung. Dazu muss auf einem angeschlossenen Rechner
 	ein Webbrowser installiert sein, in dessen Adresszeile eine IP-Adresse des Vermittlungsrechners
@@ -53,11 +46,20 @@
 	<p> Die Konfiguration und Aktivierung bzw. Deaktivierung der Firewall erfolgt &uuml;ber ein
 	Formular. Daneben ist es m&ouml;glich die Log-Daten der Firewall einzusehen. </p>
 
-	<h2> 6. Switch-Zustand einsehen </h2>
+	<h2> Switch-Zustand einsehen </h2>
 	<p> Der Switch speichert die MAC-Adressen eingehender Dateneinheiten und den Anschluss,
 	&uuml;ber den die Daten empfangen wurden. Dazu legt er die Source Address Table (SAT) an.
-	Diese Tabelle kann durch einen Doppelklick auf den Switch eingesehen werden. </p>
+	Diese Tabelle kann durch einen Klick auf den Switch eingesehen werden. </p>
 
+	<h2> Wechsel des Anwendungsmodus </h2>
+	<p> Der Aufbau des virtuellen Rechnernetzes und die IP-Konfiguration der Komponenten
+	erfolgt im Entwurfsmodus, der &uuml;ber die entsprechende Schaltfl&auml;che am oberen
+	Fensterrand erreicht wird.
+	<center><img src="hilfe/gfx/entwurfsmodus.png"></center> </p>
+      
+      <p> Das Netzwerk kann im Dokumentationsmodus u.a. mit Hilfe von Textelementen dokumentiert werden.
+      Außerdem ist es möglich, eine einfache Dokumentation zu erzeugen:
+      <center><img src="hilfe/gfx/dokumodus.png"></center> </p> 
 
 </body>
 </html>
