--- a/src/main/resources/hilfe/simulation_mode_en_GB.html
+++ b/src/main/resources/hilfe/simulation_mode_en_GB.html
@@ -11,15 +11,8 @@
   <body>
 	<h1>Simulation Mode</h1>
 
-	<h2> 1. Modification of the Infrastracture </h2>
-	<p>
-	The infrastructure of the virtual computer network and the IP configuration of the
-	components can be modified in the design mode. Switch to this mode using the icon at
-	the upper panel.
-	<center><img src="hilfe/gfx/entwurfsmodus.png"></center> </p>
-
-	<h2> 2. Using and Installing Software </h2>
-	<p> Performing a double-click at a computer/notebook the virtual desktop of the
+	<h2> Using and Installing Software </h2>
+	<p> Performing a click on a computer/notebook the virtual desktop of the
 	component is opened as a new window. Using the icon at the upper left corner of
 	this window opens another internal window to select the installed software at
 	the computer, i.e. to install and remove programmes.
@@ -28,22 +21,21 @@
 	icons at the virtual desktop. The behaviour of these programmes does not depend on 
 	whether the	graphical user interface, i.e. the internal window, is opened or not. </p>
 
-	<h2> 3. Looking at the IP Configuration </h2>
+	<h2> Looking at the IP Configuration </h2>
 	<p> It is possible to have a look at the IP configuration by selecting the icon in the
 	lower right corner of the desktop window.
 	<center><img src="hilfe/gfx/netzwek_aus.png"></center> </p>
 
-	<h2> 4. Observing the Data Exchange </h2>
+	<h2> Observing Data Exchange </h2>
 	<p> The time delay during the simulation of the data exchange can be changed by
 	the slider at the upper panel of the main window. </p>
 	<p> Every data unit which is sent or received by a computer is logged and can be displayed.
 	Use the context menu to open the window which displays the window with the data units. </p>
 	 <p> In the table with the data units every protocol data unit is represented by one
 	 or more rows. The protocol data units of the four layers of the Internet layer model are
-	 shown. It is possible to select the layers of which the data units are shown by
-	 a context menu. </p>
+	 shown.  </p>
 
-	<h2> 5. Configuring the Firewall of the Router </h2>
+	<h2> Configuring the Firewall of the Router </h2>
 	<p>
 	To configure the firewall every router provides a web interface. Therefore, to configure
 	the firewall in the simulation mode it is necessary to start the webbrowser at a
@@ -53,10 +45,23 @@
 	a web formular. Besides there is the possibility to look at the logging data of
 	the firewall. </p>
 
-	<h2> 6. State of the Switch </h2>
+	<h2> State of the Switch </h2>
 	<p> The switch stores the MAC addresses of incoming protocol data units in connection
 	with the port of the physical connection. This data is stored in the Source Address Table
-	(SAT). It is possible to show this table by a double-click on the switch. </p>
+	(SAT). It is possible to show this table by a click on the switch. </p>
+	
+	<h2> Switch Application Mode </h2>
+	<p>
+	The infrastructure of the virtual computer network and the IP configuration of the
+	components can be modified in the design mode. Switch to this mode using the icon at
+	the upper panel.
+	<center><img src="hilfe/gfx/entwurfsmodus.png"></center> </p>
+
+	<p>
+	To add explanations and to generate a simple documentation switch to the Documentation Mode:
+	<center><img src="hilfe/gfx/dokumodus.png"></center> </p>
+
+	
 
 
 </body>
