--- a/src/main/resources/hilfe/simulation_mode_fr_FR.html
+++ b/src/main/resources/hilfe/simulation_mode_fr_FR.html
@@ -15,7 +15,7 @@
   <p>
 	Ce mode permet de simuler le fonctionnement du réseau virtuel de FILIUS.</p>
 
-	<h2> 1. Installer et utiliser des logiciels </h2>
+	<h2> Installer et utiliser des logiciels </h2>
 	  <p> Chaque ordinateur et portable possède un bureau à partir duquel peuvent être
         installées puis lancées des applications. Un clic sur l’icône d’un ordinateur ou
         d’un portable fait apparaitre son bureau dans une fenêtre indépendante.
@@ -27,14 +27,14 @@
         la fenêtre du bureau ne ferme pas les applications. Pour fermer une application,
         il faut la désinstaller. </p>
 
-	<h2> 2. Afficher l’état du réseau </h2>
+	<h2> Afficher l’état du réseau </h2>
 	  <p> Lorsque le bureau d’un ordinateur ou d’un portable est affiché, en plaçant la
         souris au dessus de l’icône réseau située en bas à droite,
         l’adresse IP du poste apparait dans une infobulle.
         <center><img src="hilfe/gfx/netzwek_aus.png"></center> </p>
     <p> Pour obtenir le paramétrage IP détaillé du poste, cliquer sur l’icône. </p>
 
-	<h2> 3. Observer les échanges de données </h2>
+	<h2>Observer les échanges de données </h2>
 	  <p> Un journal conserve une trace de tous les paquets de données envoyés ou reçus par un
         poste. Pour visualiser ce journal, cliquer droit sur l’icône du poste et choisir
         Afficher les échanges de données. </p>
@@ -47,22 +47,27 @@
         la gauche le curseur situé au centre de la partie supérieure de la fenêtre
         principale. Les cables deviennent verts lorsqu’ils sont parcourus par des données. </p>
 
-	<h2> 4. Configurer le parefeu du routeur </h2>
+	<h2>Configurer le parefeu du routeur </h2>
 	  <p> En mode simulation, le parefeu d’un routeur peut être configuré via son interface
         web. Il suffit pour cela dans le navigateur web d’un poste de saisir comme url
         l’adresse IP du routeur à configurer. </p>
 	  <p> Outre la configuration, le formulaire web permet d’activer et de désactiver
         le parefeu, ainsi que de consulter son journal d’activité. </p>
 
-	<h2> 5. Afficher la table du switch </h2>
+	<h2>Afficher la table du switch </h2>
 	  <p> Le switch (ou commutateur) enregistre les adresses MAC des paquets entrants
         avec le port d’arrivée. Ces deux informations sont stockées dans la table des
         adresses sources (SAT). Pour afficher cette table, cliquer sur le switch. </p>
 
-  <h2> 6. Revenir au mode conception </h2>
+  <h2> Changer de mode </h2>
 	  <p> Si l’infrastructure du réseau a besoin d’être modifiée, il suffit de rebasculer
         vers le mode conception à l’aide du bouton de la barre supérieure :
 	      <center><img src="hilfe/gfx/entwurfsmodus.png"></center> </p>
+	  
+	  <p> Change au mode documentation pour ajouter des éléments visuels qui facilitent 
+	    la lecture du réseau virtuel :
+	    <center><img src="hilfe/gfx/dokumodus.png"></center></p>
+	  
 
 </body>
 </html>
