--- a/src/main/resources/hilfe/fr/design_mode_project.html
+++ b/src/main/resources/hilfe/fr/design_mode_project.html
@@ -2,21 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <base href="file:">
-  <style type="text/css">
-    html { background-color: rgb(250, 248, 246); padding-left: 8px; padding-right: 8px; padding-bottom: 20px; }
-    body { font-family: Helvetica,Arial,sans-serif; font-size: 12pt; }  
-    h1 { color: rgb(0, 100, 200); font-size: 20pt; border-bottom: 1px solid rgb(0, 100, 200); }
-    h2 { color: rgb(0, 100, 200); font-size: 18pt; margin-top: 0px; margin-bottom: 10px; }
-    h3 { color: rgb(0, 100, 200); font-size: 15pt; margin-top: 10px; margin-bottom: 6px; }
-    h4 { font-weight: bold; margin-top: 0px; margin-bottom: 4px; }
-    p { margin-top: 0px; margin-bottom: 8px; }
-    a { color: rgb(0, 100, 200); text-decoration: none; }
-    div.menu span { font-size: 11pt; color: rgb(0, 100, 200); white-space: nowrap; text-decoration: none; }
-    div.menu span.selected { font-weight: bold; }
-    div.center { text-align: center; margin-top: 0px; margin-bottom: 8px; }
-    ol { margin-left: 15px; }
-    ul { margin-left: 15px; }
-  </style>
+  <style type="text/css"></style>
 </head>
 <body>	
   <div class="menu">
