--- a/src/main/resources/hilfe/design_mode_de_DE.html
+++ b/src/main/resources/hilfe/design_mode_de_DE.html
@@ -2,7 +2,7 @@
   <head>
     <base href="file:bilder">
     <style type="text/css">
-	  body { font-family:Helvetica,Arial,sans-serif;	}
+	  body { font-family:Helvetica,Arial,sans-serif; margin-left: 4px; margin-right: 4px;	margin-bottom: 20px; }
       ol { margin-left: 15px;	}
       ul { margin-left: 15px;	}
       h2 {margin-bottom: 0px; margin-top: 20px}
