replace cable with connection make wireless an attribute of nic make type of host/notebook nic configurable

--- a/src/main/resources/hilfe/design_mode_de_DE.html
+++ b/src/main/resources/hilfe/design_mode_de_DE.html
@@ -17,7 +17,7 @@
 		<center><img src="hilfe/gfx/draganddrop.gif"></center>	</p>
 	  <p> Gel&ouml;scht werden die Komponenten &uuml;ber das Kontextmen&uuml; (unter
 	    Linux und Windows: rechte Maustaste &uuml;ber der Komponente bet&auml;tigen).
-      <p> Verbindungen werden erstellt, indem die Komponente Kabel ausgew&auml;hlt
+      <p> Kabelgebundene oder drahtlose Verbindungen werden erstellt, indem die Komponente Verbindung ausgew&auml;hlt
 		wird (per Mausklick oder Tastenkombination ALT+1) und anschlie&szlig;end die zu verbindenen Komponenten nacheinander mit
 		dem Cursor ausgew&auml;hlt werden.
 		<center><img src="hilfe/gfx/verkabeln.png"></center> </p>
